# khanren

./: LICENSE  README.md  khanren.cabal
app/: Main.hs
src/: LocalPrelude.hs
src/Khanren/: Core.hs  State.hs  Types.hs  Unify.hs
test/: Spec.hs
